# jira-TaskForge

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  run_server.py
docs/: configuration.md  prompting.md  troubleshooting.md
gui/: package-lock.json  package.json  vite.config.js
gui/src/: App.jsx  api.js  index.css  main.jsx
gui/src/components/: AIPanel.jsx  AdvisorPanel.jsx  ConfigPanel.jsx  FocusView.jsx  GraphView.jsx  IssueDetail.jsx  IssueList.jsx  IssueTree.jsx  Layout.jsx  SavedQueries.jsx  SearchBar.jsx  TaskGraphPanel.jsx
gui/src/hooks/: useTheme.js
gui/src/lib/: taskGraphBuilder.js
src/taskforge/: __init__.py  __main__.py  config.py  jira_client.py  logging_config.py  normalizer.py  queries.py  renderer.py  storage.py  tree.py
src/taskforge/ai/: __init__.py  base.py  doctor.py  groq.py  huggingface.py  ollama.py  prompts.py  router.py
src/taskforge/api/: __init__.py  routes_advisor.py  routes_ai.py  routes_issues.py  routes_queries.py  routes_render.py  routes_system.py
src/taskforge/cli/: __init__.py  ai_cmd.py  main.py  query.py
tests/: test_config.py  test_normalizer.py  test_queries.py  test_storage.py  test_tree.py
